lib/spec/domain/error/mother/InvalidNumberValueTypeErrorMother.ts
import { InvalidNumberValueTypeError } from '../../../../src/domain/error/InvalidNumberValueTypeError';

export class InvalidNumberValueTypeErrorMother {
    static create(): InvalidNumberValueTypeError {
        return new InvalidNumberValueTypeError();
    }

    static creator() {
        return () => InvalidNumberValueTypeErrorMother.random();
    }

    static random() {
        return this.create();
    }
}
